--- a/webApp/web/pages/stores/storesCenter.html
+++ b/webApp/web/pages/stores/storesCenter.html
@@ -12,7 +12,8 @@
 <body>
 <div id="toolBar">
     <img src="../../common/images/logo.png" id="logo" alt="logo">
-    <span id="welcome"></span>
+    <span id="hello">Hello </span>
+    <span id="userType">connected as </span>
     <button style="float: right; height: 100%;">Logout</button>
 </div>
 <div class="container">
