--- a/webApp/web/pages/stores/storesCenter.html
+++ b/webApp/web/pages/stores/storesCenter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Store Center</title>
@@ -22,7 +22,12 @@
         <ul id="userlist">
         </ul>
     </div>
-    <div id="fileChooser"></div>
+    <div id="fileChooser">
+        <label for="xmlFile" class="custom-file-upload button">
+            <img id="uploadImg" src="../../common/images/upload.png" style="width: 20px; margin-right: 15px;" alt="upload"> Upload XML File
+            <input type="file" id="xmlFile" name="xmlFile" accept=".xml">
+        </label>
+    </div>
 </div>
 </body>
 </html>
