--- a/webApp/web/pages/stores/storesCenter.html
+++ b/webApp/web/pages/stores/storesCenter.html
@@ -7,31 +7,44 @@
     <script src="../../common/context-path-helper.js"></script>
     <link rel="stylesheet" href="../../common/main.css">
     <link rel="stylesheet" href="../stores/storeCenter.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="storesCenter.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
 <div id="toolBar">
-    <img src="../../common/images/logo.png" id="logo" alt="logo">
+    <i id="account" class="fa fa-lg fa-user-circle" onclick="showAccount()"></i>
     <span id="hello">Hello </span>
     <span id="userType">connected as </span>
-    <button style="float: right; height: 100%;" onclick="openAccount">Account</button>
+    <img style="float: right " src="../../common/images/logo.png" id="logo" alt="logo">
 </div>
-<div id="account-container" style="display: none">
-    <button>X</button>
-    <div id="balance">Balance: <span></span></div>
-    <div id="activities-container">
-        <table id="activitiesTable">
-            <thead>
-            <tr>
-                <th>Type</th>
-                <th>Date</th>
-                <th>Sum</th>
-                <th>Previous Balance</th>
-                <th>Current Balance</th>
-            </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+<div id="account-container" class="popup-window">
+    <div>
+        <button onclick="showAccount()"><i class="fa fa-lg fa-times"></i></button>
+        <div id="balance">Balance: <span></span></div>
+        <form id="depositForm" style="display:none" method="POST" action="../../userslist">
+            <input id="userName" type="text" name="amount" placeholder="Amount"/>
+            <p>Date: <input type="text" id="datepicker"></p>
+            <button type="submit">Deposit</button>
+            <div class="message"></div>
+        </form>
+        <div id="activities-container">
+            <table id="activitiesTable">
+                <thead>
+                <tr>
+                    <th>Type</th>
+                    <th>Date</th>
+                    <th>Sum</th>
+                    <th>Previous Balance</th>
+                    <th>Current Balance</th>
+                </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+    </div>
     </div>
 
 </div>
@@ -41,27 +54,29 @@
         <ul id="userlist">
         </ul>
     </div>
-    <div id="fileChooser">
-        <label for="xmlFile" class="custom-file-upload button">
-            <img id="uploadImg" src="../../common/images/upload.png" style="width: 20px; margin-right: 15px;" alt="upload"> Upload XML File
-            <input type="file" id="xmlFile" name="xmlFile" accept=".xml" onchange="loadXML(event)">
-        </label>
-        <div id="message"></div>
+    <div style="width: 85%; float: left;">
+        <div id="fileChooser">
+            <label for="xmlFile" class="custom-file-upload button">
+                <i class="fa fa-fw fa-arrow-circle-up"></i>  Upload XML File
+                <input type="file" id="xmlFile" name="xmlFile" accept=".xml" onchange="loadXML(event)">
+            </label>
+            <div class="message"></div>
+        </div>
+        <div id="zones-container">
+            <table id="zonesTable">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Owner</th>
+                    <th>Products Types</th>
+                    <th>Number Of Stores</th>
+                    <th>Total Orders</th>
+                    <th>Orders Average Price</th>
+                </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
     </div>
-    <div id="zones-container">
-        <table id="zonesTable">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Owner</th>
-                <th>Products Types</th>
-                <th>Number Of Stores</th>
-                <th>Total Orders</th>
-                <th>Orders Average Price</th>
-            </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
     </div>
 </div>
 </body>
