--- a/webApp/web/pages/zonesCenter/zonesCenter.html
+++ b/webApp/web/pages/zonesCenter/zonesCenter.html
@@ -6,9 +6,9 @@
     <script src="../../common/jquery-2.0.3.min.js"></script>
     <script src="../../common/context-path-helper.js"></script>
     <link rel="stylesheet" href="../../common/main.css">
-    <link rel="stylesheet" href="../stores/storeCenter.css">
+    <link rel="stylesheet" href="../zonesCenter/zonesCenter.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="storesCenter.js"></script>
+    <script src="zonesCenter.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -25,9 +25,9 @@
     <div>
         <button onclick="showAccount()"><i class="fa fa-lg fa-times"></i></button>
         <div id="balance">Balance: <span></span></div>
-        <form id="depositForm" style="display:none" method="POST" action="../../userslist">
-            <input id="userName" type="text" name="amount" placeholder="Amount"/>
-            <p>Date: <input type="text" id="datepicker"></p>
+        <form id="depositForm" style="display:none" method="POST">
+            <input type="text" id="amount" name="amount" placeholder="Amount"/>
+            <p>Date: <input type="text" id="datepicker" name="date"></p>
             <button type="submit">Deposit</button>
             <div class="message"></div>
         </form>
@@ -72,6 +72,7 @@
                     <th>Number Of Stores</th>
                     <th>Total Orders</th>
                     <th>Orders Average Price</th>
+                    <th>Enter Zone</th>
                 </tr>
                 </thead>
                 <tbody></tbody>
