--- a/webApp/web/pages/zone/zone.html
+++ b/webApp/web/pages/zone/zone.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="zone.css">
     <link rel="stylesheet" href="../../common/main.css">
     <script src="zone.js"></script>
+    <script src="customerOptions.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -44,6 +45,7 @@
         </form>
 
         <div id="staticOrder-container" style="display: none">
+            <h3>Choose a store to buy From</h3>
             <table id="storeSelect">
                 <thead>
                 <tr>
@@ -54,6 +56,8 @@
                 </thead>
                 <tbody></tbody>
             </table>
+
+            <h3>Choose a product to buy</h3>
             <table id="storeProductSelect">
                 <thead>
                 <tr>
