--- a/webApp/web/pages/zone/zone.html
+++ b/webApp/web/pages/zone/zone.html
@@ -33,6 +33,7 @@
     <div>
         <button onclick="showWindow('order-container')" class="fa fa-lg fa-times"></button>
         <form id="orderForm" method="POST">
+            <h2>New Order</h2>
             <input type="text" id="datepicker" name="date" required placeholder="Date">
             <p>Location:  <input type="number" id="x" min="1" max="50" name="x" required placeholder="X"> <input type="number" id="y" min="1" max="50" name="y" required placeholder="Y"></p>
             <div>
