--- a/webApp/web/pages/zone/zone.html
+++ b/webApp/web/pages/zone/zone.html
@@ -89,13 +89,10 @@
                 </table>
             </div>
         </div>
-    <div id="cart">
-
-    </div>
     </div>
 </div>
-
 <div id="product-container">
+    <h2>Product Available</h2>
     <table class="productsTable">
         <thead>
         <tr>
@@ -111,6 +108,7 @@
     </table>
 </div>
 <div id="stores-container">
+    <h2>Stores Available</h2>
     <table id="storesTable">
         <thead>
         <tr>
